# conversation-insights-backend

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/: README.md
docs/: ARCHITECTURE.md  DEMO.md  DEPLOYMENT.md  TROUBLESHOOTING.md
scripts/: load_kaggle_subset.py  simulate_load.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  middleware.py  schemas.py
src/api/routes/: conversations.py  insights.py  metrics.py  trends.py
src/db/: models.py  session.py
src/db/migrations/: README.md
src/ingestion/: __init__.py  normalizer.py  queue.py
src/metrics/: __init__.py  prometheus.py
src/processing/: __init__.py  batch_controller.py  cache.py  grok_client.py  pre_filter.py  worker.py
static/: dashboard.html  health.html  ingest.html  insights.html  trends.html
tests/: __init__.py  conftest.py  test_api_conversations.py  test_processing_worker.py
